pamatec.template
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "Pamatec Application Deployment",
    "Parameters": {
        "GlobalDomainName": {
            "Description": "Global domain name (E.g 'pamatec.com.ph')",
            "MinLength": "1",
            "Type": "String",
            "Default": "pamatec.com.ph",
            "ConstraintDescription": "Domain Name cannot be empty"
        },
        "NetworkStack": {
            "Description": "Name of the Network Stack",
            "MinLength": "1",
            "Type": "String",
            "ConstraintDescription": "Network stack Name cannot be null"
        },
        "ELBStack": {
            "Description": "Name of the ELB Stack",
            "MinLength": "1",
            "Type": "String",
            "ConstraintDescription": "ELB stack Name cannot be null"
        },
        "AppServerAMI": {
           "Description": "Name of AppServer AMI",
           "MinLength": "1",
           "Type": "AWS::EC2::Image::Id",
           "ConstraintDescription": "AppServer AMI cannot be null"
        },
        "PublicELBSecurityGroup": {
         "Description": "Name of the public ELB Security Group",
         "MinLength": "1",
         "Type": "String",
         "ConstraintDescription": "AppServer AMI cannot be null"
        }
    },
    "Conditions": {
    },
    "Mappings": {
    },
    "Resources": {
      "AppServerTargetGroup": {
         "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
         "Properties": {
             "HealthCheckIntervalSeconds": "10",
             "HealthCheckProtocol": "HTTP",
             "HealthCheckTimeoutSeconds": "2",
             "HealthyThresholdCount": "2",
             "UnhealthyThresholdCount": "3",
             "HealthCheckPath": "/health.php",
             "Matcher": { "HttpCode": "200" },
             "Port": "80",
             "Protocol": "HTTP",
             "TargetGroupAttributes": [],
             "Targets": [{ "Id": {"Ref" : "AppServerInstance"}, "Port": 80 }],
             "TargetType": "instance",
             "VpcId": { "Fn::ImportValue": {"Fn::Sub": "${NetworkStack}-VPC" } },
             "Tags": [{
                "Key": "Name",
                "Value": { "Fn::Join": [ " ", [ { "Fn::ImportValue": {"Fn::Sub": "${NetworkStack}-SetupName"} }, "Pamatec AppServer Target Group" ] ] }
             }]
         }
      },
      "HTTPListenerRule": {
         "Type": "AWS::ElasticLoadBalancingV2::ListenerRule",
         "Properties": {
            "Actions": [{
               "Type": "forward",
               "TargetGroupArn": { "Ref": "AppServerTargetGroup" }
            }],
            "Conditions": [{
               "Field": "host-header",
               "Values": [ { "Fn::Join": [ "", [ "*.", "Ref": "GlobalDomainName" ] ] } ]
            }],
            "ListenerArn": { "Fn::ImportValue": {"Fn::Sub": "${ELBStack}-HTTPListener"} },
            "Priority": 401
         }
      },
      "HTTPListenerRuleDomain": {
         "Type": "AWS::ElasticLoadBalancingV2::ListenerRule",
         "Properties": {
            "Actions": [{
               "Type": "forward",
               "TargetGroupArn": { "Ref": "AppServerTargetGroup" }
            }],
            "Conditions": [{
               "Field": "host-header",
               "Values": [{ "Ref": "GlobalDomainName" }]
            }],
            "ListenerArn": { "Fn::ImportValue": {"Fn::Sub": "${ELBStack}-HTTPListener"} },
            "Priority": 402
         }
      },
      "SSLListenerRule": {
         "Type": "AWS::ElasticLoadBalancingV2::ListenerRule",
         "Properties": {
            "Actions": [{
               "Type": "forward",
               "TargetGroupArn": { "Ref": "AppServerTargetGroup" }
            }],
            "Conditions": [{
               "Field": "host-header",
               "Values": [ { "Fn::Join": [ "", [ "*.", "Ref": "GlobalDomainName" ] ] } ]
            }],
            "ListenerArn": { "Fn::ImportValue": {"Fn::Sub": "${ELBStack}-SSLListener"} },
            "Priority": 401
         }
      },
      "SSLListenerRuleDomain": {
         "Type": "AWS::ElasticLoadBalancingV2::ListenerRule",
         "Properties": {
            "Actions": [{
               "Type": "forward",
               "TargetGroupArn": { "Ref": "AppServerTargetGroup" }
            }],
            "Conditions": [{
               "Field": "host-header",
               "Values": [{ "Ref": "GlobalDomainName" }]
            }],
            "ListenerArn": { "Fn::ImportValue": {"Fn::Sub": "${ELBStack}-SSLListener"} },
            "Priority": 402
         }
      },
       "AppServerRole": {
          "Type": "AWS::IAM::Role",
          "Properties": {
             "AssumeRolePolicyDocument": {
                "Version": "2012-10-17",
                "Statement": [
                   {
                      "Effect": "Allow",
                      "Principal": { "Service": [ "ec2.amazonaws.com" ] },
                            "Action": [ "sts:AssumeRole" ]
                   }
                ]
             },
             "Path": "/"
          }
       },
       "AllowSendAWSLogsPolicy": {
         "Type": "AWS::IAM::Policy",
         "Properties": {
            "PolicyName": "AllowSendAWSLogs",
            "PolicyDocument": {
               "Version": "2012-10-17",
               "Statement": [
               {
                  "Effect": "Allow",
                  "Action": [
                     "logs:CreateLogGroup",
                     "logs:CreateLogStream",
                     "logs:DescribeLogGroups",
                     "logs:DescribeLogStreams",
                     "logs:PutLogEvents"
                  ],
                  "Resource": "*"
               }]
             },
             "Roles": [{ "Ref": "AppServerRole" }]
          }
       },
       "AllowEC2InfoPolicy": {
         "Type": "AWS::IAM::Policy",
         "Properties": {
            "PolicyName": "AllowAccessToEC2Info",
            "PolicyDocument": {
               "Version": "2012-10-17",
               "Statement": [
               {
                  "Effect": "Allow",
                  "Action": [
                     "ec2:DescribeInstanceStatus",
                     "ec2:DescribeTags"
                  ],
                  "Resource": "*"
               }]
            },
            "Roles": [{ "Ref": "AppServerRole" }]
          }
       },
       "AppServerSecurityGroup": {
          "Type": "AWS::EC2::SecurityGroup",
          "Properties": {
             "VpcId": { "Fn::ImportValue": {"Fn::Sub": "${NetworkStack}-VPC"} },
             "GroupDescription": { "Fn::Join": [ " ", [ { "Fn::ImportValue": {"Fn::Sub": "${NetworkStack}-SetupName"} }, "Pamatec AppServer Security Group" ] ] },
             "SecurityGroupIngress": [
                {
                   "IpProtocol": "tcp",
                   "FromPort": "22",
                   "ToPort": "22",
                   "SourceSecurityGroupId": { "Fn::ImportValue": { "Fn::Sub": "${NetworkStack}-BastionSecurityGroup" } },
                   "Description": "SSH Access from Bastion"
                },
                {
                   "IpProtocol": "tcp",
                   "FromPort": "80",
                   "ToPort": "80",
                   "SourceSecurityGroupId": { "Ref": "PublicELBSecurityGroup" },
                   "Description": "HTTP Access from Public ELB"
                }
             ],
             "Tags": [{
                "Key": "Name",
                "Value": { "Fn::Join": [ " ", [ { "Fn::ImportValue": {"Fn::Sub": "${NetworkStack}-SetupName"} }, "Pamatec AppServer Security Group" ] ] }
             }]
          }
      },
      "AppServerRole": {
          "Type": "AWS::IAM::Role",
          "Properties": {
             "AssumeRolePolicyDocument": {
                "Version": "2012-10-17",
                   "Statement": [
                      {
                         "Effect": "Allow",
                         "Principal": {
                         "Service": [
                            "ec2.amazonaws.com"
                            ]
                         },
                         "Action": [
                            "sts:AssumeRole"
                         ]
                      }
                  ]
               },
               "Path": "/"
            }
        },
       "AppServerInstanceProfile": {
            "Type": "AWS::IAM::InstanceProfile",
            "Properties": {
                "Path": "/",
                "Roles": [
                    {
                        "Ref": "AppServerRole"
                    }
                ]
            }
      },
      "AppServerInstance": {
         "Type": "AWS::EC2::Instance",
         "Properties": {
            "ImageId": { "Ref": "AppServerAMI" },
            "KeyName": { "Fn::ImportValue": {"Fn::Sub": "${NetworkStack}-InstanceKeyName"} },
            "InstanceType": "t3.small",
            "IamInstanceProfile": { "Ref": "AppServerInstanceProfile" },
            "DisableApiTermination": false,
            "NetworkInterfaces": [ {
               "AssociatePublicIpAddress": "false",
               "DeviceIndex": "0",
               "GroupSet": [ 
                  { "Ref": "AppServerSecurityGroup" }
               ],
               "SubnetId": { "Fn::ImportValue": {"Fn::Sub": "${NetworkStack}-PrivateSubnetAZ1"} }
            }],
            "Tags": [{
               "Key": "Name",
               "Value": { "Fn::Join": [ " ", [ { "Fn::ImportValue": {"Fn::Sub": "${NetworkStack}-SetupName"} }, "Pamatec AppServer Instance" ] ] },
             },
             {
               "Key": "Retention",
               "Value": "60",
             },
             {
                "Key": "LambdaBackupConfiguration",
                "Value": "30,8,12,2"
             }]
          }
      },
      "HostedZone": {
         "Type": "AWS::Route53::HostedZone",
            "Properties": {
               "HostedZoneConfig": {
                  "Comment": { "Fn::Join": [ " ", ["INACTIVE Hosted Zone for", { "Ref": "GlobalDomainName" } ] ] }
               },
               "Name": { "Ref": "GlobalDomainName" }
            }
      },
      "WWWRecord": {
         "Type": "AWS::Route53::RecordSetGroup",
         "Properties": {
            "HostedZoneId": { "Ref": "HostedZone" },
            "Comment": "WWW Record",
            "RecordSets" : [{
               "Name": { "Fn::Join": [ "", ["www.", { "Ref": "GlobalDomainName" }, "." ] ] },
               "Type": "A",
               "AliasTarget": {
                  "HostedZoneId": { "Fn::ImportValue": {"Fn::Sub": "${ELBStack}-PublicELBCanonicalHostedZoneID"} },
                  "DNSName": { "Fn::ImportValue": {"Fn::Sub": "${ELBStack}-PublicELBDNS"} }
               }
            }]
         }
      },
      "NoWWWRecord": {
         "Type": "AWS::Route53::RecordSetGroup",
         "Properties": {
            "HostedZoneId": { "Ref": "HostedZone" },
            "Comment": "No WWW Record",
            "RecordSets" : [{
               "Name": { "Ref": "GlobalDomainName" },
               "Type": "A",
               "AliasTarget": {
                  "HostedZoneId": { "Fn::ImportValue": {"Fn::Sub": "${ELBStack}-PublicELBCanonicalHostedZoneID"} },
                  "DNSName": { "Fn::ImportValue": {"Fn::Sub": "${ELBStack}-PublicELBDNS"} }
               }
            }]
         }
      }
   },
   "Outputs": {
   }
}
